add the correct plots references

--- a/Transformer/notebook/Transformer_implementation.ipynb
+++ b/Transformer/notebook/Transformer_implementation.ipynb
@@ -1183,7 +1183,7 @@
     "(see [MultiHeadAttention_ch11](https://github.com/Excelsior7/DIVEINTODEEPLEARNING/blob/main/Attention_mechanisms/MultiHeadAttention_ch11.md))\n",
     "***\n",
     "\n",
-    "![png](../../../plots/Transformer_fig1.png) \n",
+    "![png](../../plots/Transformer_fig1.png) \n",
     "\n",
     "\"Multi-head attention allows the model to jointly attend to information from different representation\n",
     "subspaces at different positions. With a single attention head, averaging inhibits this.\" - page 5.\n",
@@ -1346,7 +1346,7 @@
     "***\n",
     "### *POSITIONAL ENCODING*\n",
     "\n",
-    "![png](../../../plots/Transformer_fig2.png)\n",
+    "![png](../../plots/Transformer_fig2.png)\n",
     "\n",
     "source : https://kazemnejad.com/blog/transformer_architecture_positional_encoding/"
    ]
